// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VisuallyHidden /> ref should work 1`] = `
.c0 {
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  class="poodle-box poodle-visually-hidden c0"
>
  VisuallyHidden
</div>
`;

exports[`<VisuallyHidden /> should render Box props correctly 1`] = `
.c0 {
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  margin-top: 20px;
}

<p
  class="poodle-box poodle-visually-hidden c0"
  id="id"
>
  VisuallyHidden
</p>
`;

exports[`<VisuallyHidden /> should render VisuallyHidden correctly 1`] = `
.c0 {
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  class="poodle-box poodle-visually-hidden c0"
>
  VisuallyHidden
</div>
`;

exports[`<VisuallyHidden /> theming should extend styles in global 1`] = `
.c0 {
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<div
  class="poodle-box poodle-visually-hidden c0"
>
  VisuallyHidden
</div>
`;

exports[`<VisuallyHidden /> theming should extend styles in local 1`] = `
.c0 {
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<div
  class="poodle-box poodle-visually-hidden c0"
>
  VisuallyHidden
</div>
`;

exports[`<VisuallyHidden /> theming should override styles 1`] = `
.c0 {
  margin-top: 50px;
}

<div
  class="poodle-box poodle-visually-hidden c0"
>
  VisuallyHidden
</div>
`;

exports[`<VisuallyHidden /> theming should render with default props correctly 1`] = `
.c0 {
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  class="poodle-box poodle-visually-hidden hello c0"
  id="id"
>
  VisuallyHidden
</div>
`;
